[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.4"
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"

